--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -1,9 +1,10 @@
+// Used in module: assembly_Migration.adoc
 [id='Creating_and_running_a_migration_plan']
 = Creating and running a migration plan
 
 The infrastructure migration involves the following key tasks:
 
-. xref:Pre_migration_tasks[Pre-migration tasks]:
+. xref:Premigration_tasks[Premigration tasks]:
 
 * *CSV file:* If you are migrating a large number of virtual machines, you can create a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] to add the virtual machines to the migration plan.
 +
@@ -11,7 +12,7 @@ If you are migrating virtual machines that have been migrated in the past, you m
 
 * *Ansible environment:* If you are using Ansible to automate pre- and post-migration tasks, you must set up an xref:Setting_up_an_ansible_environment[Ansible environment].
 
-* *RHEL pre-migration playbook:* If you are migrating RHEL or other Linux virtual machines, you must set up an xref:Setting_up_an_ansible_environment[Ansible environment] and create a xref:Configuring_the_rhel_premigration_playbook[RHEL pre-migration playbook].
+* *RHEL premigration playbook:* If you are migrating RHEL or other Linux virtual machines, you must set up an xref:Setting_up_an_ansible_environment[Ansible environment] and create a xref:Configuring_the_rhel_premigration_playbook[RHEL premigration playbook].
 
 . xref:Creating_a_migration_plan[Creating the migration plan]
 
@@ -26,5 +27,3 @@ include::proc_Creating_a_migration_plan.adoc[leveloffset=+1]
 include::proc_Running_a_migration_plan.adoc[leveloffset=+1]
 
 include::proc_Validating_a_migration_plan.adoc[leveloffset=+1]
-
-include::proc_Canceling_a_migration_plan.adoc[leveloffset=+1]
