--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
@@ -1,4 +1,4 @@
-// assembly_Migration.adoc
+// Used in modeule: proc_Running_a_migration_plan.adoc
 [id="Canceling_a_migration_plan"]
 = Canceling a migration plan in progress
 
