--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -1,3 +1,4 @@
+// Used in module: assembly_Conversion_hosts.adoc
 [id="Configuring_conversion_hosts_for_transformation"]
 = Configuring the conversion hosts for VDDK or SSH transformation
 
