--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,4 +1,5 @@
-[[Creating_an_Infrastructure_Mapping]]
+// Used in module: assembly_Migration.adoc
+[id="Creating_an_Infrastructure_Mapping"]
 = Creating an infrastructure mapping
 
 The infrastructure mapping maps your source resources to target resources.
