--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -1,3 +1,4 @@
+// Used in module: assembly_Conversion_hosts.adoc
 [id="Creating_conversion_hosts"]
 = Creating the conversion hosts
 
@@ -7,7 +8,7 @@ For Red Hat Virtualization, select the conversion hosts in your environment. See
 
 For OpenStack Platform, download the conversion appliance and create the conversion hosts. See xref:Creating_OSP_conversion_hosts[Creating OpenStack Platform conversion hosts].
 
-[[Conversion_host_prerequisites]]
+[id="Conversion_host_prerequisites"]
 == Conversion host prerequisites
 
 Before you create the conversion hosts, ensure that the following prerequisites are met:
@@ -15,7 +16,7 @@ Before you create the conversion hosts, ensure that the following prerequisites 
 * Decide how many conversion hosts to create. See xref:Number_of_conversion_hosts[How many conversion hosts to create]
 * Choose VDDK or SSH transformation for the migration. See xref:datapath_transformation_options_vddk_ssh[Transformation options: VDDK or SSH]
 
-[[Number_of_conversion_hosts]]
+[id="Number_of_conversion_hosts"]
 How many conversion hosts to create::
 All the virtual machines in the migration plan are migrated at the same time. Therefore, the number of conversion hosts you create depends on the size of your migration. Multiple conversion hosts are recommended for load-balancing purposes, even for smaller migrations.
 +
@@ -28,7 +29,7 @@ Each conversion host is limited to `10` concurrent migrations, unless you  xref:
 The maximum number of concurrent virtual machine migrations per conversion host is `20` for both VDDK and SSH transformation. The SSH limitation, however, applies only to RHV 4.2.5, not to later versions of RHV.
 ====
 
-[[datapath_transformation_options_vddk_ssh]]
+[id="datapath_transformation_options_vddk_ssh"]
 Transformation options: VDDK or SSH::
 Choose the transformation option, VDDK or SSH, that is appropriate for your environment:
 +
@@ -47,14 +48,14 @@ Choose the transformation option, VDDK or SSH, that is appropriate for your envi
 ** SSH access must be enabled on the source hypervisors
 ** Source and target environments must share SSH keys
 
-[[Creating_RHV_conversion_hosts]]
+[id="Creating_RHV_conversion_hosts"]
 == Creating Red Hat Virtualization conversion hosts
 
 If you are migrating to Red Hat Virtualization, select one or more existing hosts (on physical machines, not virtual machines) to use as conversion hosts.
 
 You can configure the conversion hosts for SSH or VDDK transformation. See xref:Configuring_conversion_hosts_for_transformation[].
 
-[[Creating_OSP_conversion_hosts]]
+[id="Creating_OSP_conversion_hosts"]
 == Creating OpenStack Platform conversion hosts
 
 . Download the OpenStack Platform conversion appliance:
