--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
@@ -1,4 +1,5 @@
-[[Retrying_a_failed_migration_plan]]
+// Used in module: assembly_Troubleshooting.adoc
+[id="Retrying_a_failed_migration_plan"]
 = Retrying a failed migration plan
 
 If the cause of the failed migration was external (for example, network disruption), you can retry the migration:
