--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Validating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Validating_a_migration_plan.adoc
@@ -1,4 +1,5 @@
-[[Validating_a_migration_plan]]
+// Used in module: assembly_Creating_and_running_a_migration_plan.adoc
+[id="Validating_a_migration_plan"]
 = Validating a migration plan
 
 When the migration plan has finished, click *Migration Plans Complete* to view the status of the migration plan. The completed migration plan shows successfully migrated virtual machines.
