--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
@@ -1,15 +1,19 @@
+// Used in module: assembly_Troubleshooting.adoc
 [id="Known_issues"]
 = Known Issues
 
+Critical Updates::
 After installing IMS, you must obtain critical updates for Red Hat Virtualization and the OpenStack Platform conversion appliance by doing the following:
 
 ** Red Hat Virtualization: Run `yum update`.
 
 ** OpenStack Platform: Contact link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support] for a newer version of the appliance build.
 
+Issues to be addressed::
+
 These items will be addressed in a future release.
 
-.All platforms
+.General issues
 
 * Canceling a migration does not stop the creation of volumes, instances, and network ports (OpenStack Platform), or virtual machines (Red Hat Virtualization). link:https://bugzilla.redhat.com/show_bug.cgi?id=1666799[BZ#1666799]
 
