--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
@@ -1,3 +1,4 @@
+// Used in module: assembly_Preparing_the_target_environment.adoc
 [id="Software_compatibility_requirements"]
 = Checking software compatibility in the target environment
 
