--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -1,30 +1,30 @@
 [id='Infrastructure_migration_solution_overview']
 = Infrastructure Migration Solution overview
 
-Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization or to Red Hat OpenStack Platform:
+Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 to Red Hat Virtualization 4.2.7 (or later) or to Red Hat OpenStack Platform 13 (or later):
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization] (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform] enables you to build a private or public cloud on top of Red Hat Enterprise Linux. OpenStack Platform is scaleable and fault-tolerant.
+* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform[Red Hat OpenStack Platform] enables you to build a private or public cloud on top of Red Hat Enterprise Linux. OpenStack Platform is scaleable and fault-tolerant.
 
-The actual migration process is performed in link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure. CloudForms enables you to map your source and target environments and to create and run a migration plan.
+The actual migration process is performed in link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure. CloudForms enables you to map your VMware resources to the target environment and to create and run a migration plan.
 
 The Infrastructure Migration Solution has 3 key phases:
 
 . xref:Planning_the_migration[Planning the migration]
 +
-* Assessing the source and target environments to ensure sufficient resources for migration
+* Assessing the VMware and target environments to ensure sufficient resources for migration
 * Formulating strategies to minimize the impact on users
 
 . xref:Preparing_the_migration_environment[Preparing the environment]
 +
-* Preparing the VMware source environment
-* Preparing the Red Hat Virtualization or OpenStack Platform target environment
+* Preparing the VMware environment
+* Preparing the target environment
 * Creating and configuring the conversion hosts
 
 . xref:Migrating_the_infrastructure[Migrating the infrastructure]
 +
-* Mapping the source infrastructure to the target infrastructure
+* Mapping the VMware resources to the target infrastructure
 * Creating and running a migration plan
 * xref:Troubleshooting[Troubleshooting], if necessary
 
