--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Running_a_migration_plan.adoc
@@ -1,8 +1,12 @@
-[[Running_a_migration_plan]]
+// Used in module: assembly_Creating_and_running_a_migration_plan.adoc
+[id="Running_a_migration_plan"]
 = Running a migration plan
 
-You can run the migration plan immediately or in the future, depending on the schedule option that you selected.
+You can run the migration plan xref:Running_migration_plan_immediately[immediately] or in the xref:Running_migration_plan_future[future], depending on the schedule option that you selected.
 
+Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan] that has started running.
+
+[id="Running_migration_plan_immediately"]
 == Running a migration plan immediately
 
 The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time.
@@ -17,6 +21,7 @@ To view the migration progress of individual virtual machines:
 The counter that shows the migration plan progress in menu:Compute[Migration > Migration Plans] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plans counter displays the total time for running a migration plan, while the migration plan details counter displays the time for migrating the virtual machines.
 ====
 
+[id="Running_migration_plan_future"]
 == Running a migration plan in the future
 
 The migration plan is saved in *Migration Plans Not Started* and will not run until you schedule or run it.
@@ -29,3 +34,5 @@ The migration plan is saved in *Migration Plans Not Started* and will not run un
 * To run a scheduled plan immediately, click *Migrate*.
 
 * To edit or delete a migration plan, click the *More Actions* icon.
+
+include::proc_Canceling_a_migration_plan.adoc[leveloffset=+1]
