--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Setting_up_an_ansible_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Setting_up_an_ansible_environment.adoc
@@ -1,4 +1,4 @@
-[[Setting_up_an_ansible_environment]]
+[id="Setting_up_an_ansible_environment"]
 = Setting up an Ansible environment
 
 You can perform automated tasks before and after a virtual machine is migrated, such as removing web servers from a load-balancing pool before migration and adding them back to the pool after migration.
@@ -7,7 +7,7 @@ Each task is an Ansible service catalog item, which you select in *Advanced Opti
 
 To set up an Ansible environment and create a service catalog item:
 
-[[Creating_an_Ansible_service_catalog_item]]
+[id="Creating_an_Ansible_service_catalog_item"]
 . Configure an link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-inside[Ansible repository] that is accessible to CloudForms.
 
 . Create link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-credentials[Ansible credentials] for the virtual machines.
