Final rewrite and reorg

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
@@ -1,21 +1,19 @@
 [id="Conversion_hosts"]
 = Creating and configuring the conversion hosts
 
-The migration is performed by software installed on the conversion hosts.
+The migration is performed by software installed on the conversion hosts. Creating and configuring the conversion hosts involves the following key steps:
 
-Creating and configuring conversion hosts involves the following key steps:
-
-. Deciding xref:Number_of_conversion_hosts[how many conversion hosts] you need
-. Choosing xref:datapath_transformation_options_vddk_ssh[VDDK or SSH] as the transformation option
-. Creating the xref:Creating_RHV_conversion_hosts[Red Hat Virtualization] or xref:Creating_OSP_conversion_hosts[OpenStack Platform] conversion hosts
-. Configuring the conversion hosts for xref:Configuring_conversion_hosts_for_transformation[VDDK or SSH transformation]
-. Enabling the conversion hosts in xref:Enabling_conversion_hosts_in_cloudforms[CloudForms]
-. Optionally, changing the xref:Configuring_the_maximum_number_of_concurrent_migrations[maximum number of concurrent migrations]
+. Ensuring that the xref:Conversion_host_prerequisites[prerequisites] are met.
+. OpenStack Platform only: xref:Creating_OSP_conversion_hosts[Creating the OpenStack Platform conversion hosts]
+. xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts for VDDK or SSH transformation]
+. Red Hat Virtualization only: xref:Authenticating_rhv_conversion_hosts_in_cloudforms[Authenticating the Red Hat Virtualization conversion hosts in CloudForms]
 . Validating the xref:Verifying_conversion_hosts[conversion hosts]
 
-include::modules/proc_Creating_conversion_hosts.adoc[leveloffset=+1]
+You can xref:Upgrading_conversion_hosts[upgrade the conversion hosts] if you upgrade your target environment.
+
+include::modules/con_Conversion_host_prerequisites.adoc[leveloffset=+1]
+include::modules/proc_Creating_osp_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
-include::modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
+include::modules/proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
 include::modules/proc_Verifying_conversion_hosts.adoc[leveloffset=+1]
-include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
 include::modules/proc_Upgrading_conversion_hosts.adoc[leveloffset=+1]
