--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -2,23 +2,13 @@
 [id='Creating_and_running_a_migration_plan']
 = Creating and running a migration plan
 
-The infrastructure migration involves the following key tasks:
+The infrastructure migration involves the following key stages:
 
-. xref:Premigration_tasks[Premigration tasks]:
-
-* *CSV file:* If you are migrating a large number of virtual machines, you can create a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] to add the virtual machines to the migration plan.
-+
-If you are migrating virtual machines that have been migrated in the past, you must use a CSV file to add the virtual machines because the migration plan cannot re-discover them.
-
-* *Ansible environment:* If you are using Ansible to automate pre- and post-migration tasks, you must set up an xref:Setting_up_an_ansible_environment[Ansible environment].
-
-* *RHEL premigration playbook:* If you are migrating RHEL or other Linux virtual machines, you must set up an xref:Setting_up_an_ansible_environment[Ansible environment] and create a xref:Configuring_the_rhel_premigration_playbook[RHEL premigration playbook].
+. Performing xref:Premigration_tasks[premigration tasks], if necessary
 
 . xref:Creating_a_migration_plan[Creating the migration plan]
 
-. xref:Running_a_migration_plan[Running the migration plan] immediately or scheduling it to run in the future
-
-You can xref:Canceling_a_migration_plan[cancel] a migration plan in progress.
+. xref:Running_a_migration_plan[Running the migration plan] immediately or scheduling it to run in the future. Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan in progress].
 
 include::proc_Premigration_tasks.adoc[leveloffset=+1]
 
