--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
@@ -4,7 +4,7 @@
 
 Preparing your target environment involves the following key steps:
 
-* Check that the software versions are compatible. See xref:Software_compatibility_requirements[].
+* Checking that the software versions you are installing are compatible. See xref:Software_compatibility_requirements[].
 * Installing and configuring the target environment:
 
 ** Red Hat Virtualization: xref:Preparing_the_rhv_target_environment[]
