--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_migration_workflow.adoc
@@ -12,7 +12,7 @@ image:circle_step_numbers/2.png[25,25] CloudForms uses the migration plan to loc
 
 [NOTE]
 ====
-Source virtual machines must be powered on for migration.
+The VMware virtual machines must be powered on for migration.
 ====
 
 image:circle_step_numbers/3.png[25,25] If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
