--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -1,8 +1,8 @@
 // Used in module: assembly_Preparation.adoc
 [id="Preparing_the_vmware_source_environment"]
-= Preparing the source environment
+= Preparing the VMware environment
 
-Prepare the VMware source environment for migration:
+Prepare the VMware environment for migration:
 
 . Extend the VMware network to the target environment.
 +
@@ -21,6 +21,6 @@ The network configuration must not be changed in any way during the migration. I
 
 . Check that source virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted.
 
-. Red Hat Virtualization only: Check that the names of source virtual machines do not duplicate virtual machine names in the target environment.
+. Red Hat Virtualization only: Check that the names of VMware virtual machines do not duplicate the names of existing RHV virtual machines.
 
 You are ready to xref:Preparing_the_target_environment[prepare the target environment].
