--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
@@ -2,16 +2,17 @@
 [id="Known_issues"]
 = Known Issues
 
-Critical Updates::
-After installing IMS, you must obtain critical updates for Red Hat Virtualization and the OpenStack Platform conversion appliance by doing the following:
+== Critical Updates
+
+After installing IMS, you can obtain critical updates for the conversion host by doing the following:
 
 ** Red Hat Virtualization: Run `yum update`.
 
-** OpenStack Platform: Contact link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support] for a newer version of the appliance build.
+** OpenStack Platform: Contact link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support] for a newer version of the conversion appliance build.
 
-Issues to be addressed::
+== Issues to be addressed
 
-These items will be addressed in a future release.
+The following issues will be addressed in a future release.
 
 .General issues
 
