--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
@@ -9,8 +9,7 @@ Check the following logs to troubleshoot a failed migration.
 
 This log traces the orchestration of the virtual machine migration in CloudForms.
 
-Location::
-`/var/www/miq/vmdb/log/automation.log`
+Location: `/var/www/miq/vmdb/log/automation.log`
 
 [id="Conversion_host_logs"]
 .Conversion host logs
@@ -25,13 +24,15 @@ When disk migration starts, two logs are created in the conversion host:
 Both logs are required for bug analysis. If you open a link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support call], you should provide both logs.
 ====
 
-Location::
+Location:
+
 * Red Hat Virtualization: `/var/log/vdsm/import/v2v-import-_timestamp_-_log_number_.log` and `v2v-import-_timestamp_-_log_number_-wrapper.log`
 * OpenStack Platform: `/var/log/virt-v2v/v2v-import-_timestamp_-_log_number_.log` and `v2v-import-_timestamp_-_log_number_-wrapper.log`
 
 [id="VM_migration_log"]
 .Virtual machine migration log
 
-Location::
+Location:
+
 . In menu:Compute[Migration Plans > Migration Plans Complete], click a migration plan name to go to the details view.
 . Click menu:Download Log[Migration log] of a virtual machine.
