--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -3,7 +3,7 @@
 
 Preparing the environment for migration involves the following key steps:
 
-* Preparing the xref:Preparing_the_vmware_source_environment[source environment]
+* Preparing the xref:Preparing_the_vmware_source_environment[VMware source environment]
 * Preparing the xref:Preparing_the_target_environment[target environment]
 * Creating and configuring the xref:Conversion_hosts[conversion hosts]
 
