--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc
@@ -1,8 +1,6 @@
 // Used in module: assembly_Conversion_hosts.adoc
-[id="Enabling_conversion_hosts_in_cloudforms"]
-= Enabling the conversion hosts in CloudForms
-
-OpenStack Platform conversion hosts do not require configuration in CloudForms.
+[id="Authenticating_rhv_conversion_hosts_in_cloudforms"]
+= Authenticating the Red Hat Virtualization conversion hosts in CloudForms
 
 [id="Enabling_rhv_conversion_hosts_in_cloudforms"]
 Authenticate the Red Hat Virtualization conversion hosts:
