--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -4,23 +4,23 @@
 
 .Prerequisite
 
-Check the software compatibility requirements. See xref:Software_compatibility_requirements[].
+Check the software compatibility requirements in xref:Software_compatibility_requirements[].
 
 .Procedure
 
-. Ensure that the storage backends have sufficient space for the virtual machines you are migrating.
+. Ensure that the OpenStack Platform storage backends have sufficient space for the virtual machines you are migrating.
 
 . Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations, and disable the C1E halt state, if applicable.
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform] 13 or later.
 
-. Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the target instances to ensure that the IP addresses of the source virtual machines are preserved.
+. Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the OpenStack Platform instances to ensure that the VMware IP addresses are preserved.
 
-. link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#create_a_project[Create a project] for the conversion hosts and whatever destination projects you require for the target instances.
+. link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#create_a_project[Create a project] for the conversion hosts and whatever destination projects you require for the OpenStack Platform instances.
 
 . Ensure that the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[`admin` user has `member` and `admin` roles] in the conversion and destination projects.
 
-.   link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[Set at least one `volume type`] for the target block storage. Otherwise, CloudForms will not detect the storage during infrastructure mapping.
+. link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[Set at least one `volume type`] for the OpenStack Platform block storage. Otherwise, CloudForms will not detect the storage during infrastructure mapping.
 
 . Ensure that the user configured in CloudForms for the OpenStack Platform provider has `admin` privileges on the target projects.
 
@@ -33,7 +33,7 @@ Check the software compatibility requirements. See xref:Software_compatibility_r
 Outbound traffic is enabled by default. If you have changed this setting, enable ports 902 (CloudForms to VMware) and 5480 (`virt-v2v` to vCenter).
 ====
 
-. Create flavors suitable for the virtual machines that you are migrating. If you do not create custom flavors, CloudForms will try to map the source virtual machine to an existing flavor.
+. Create flavors suitable for the virtual machines that you are migrating. If you do not create custom flavors, CloudForms will try to map each VMware virtual machine to an existing flavor.
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.7 or later.
 
