--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
@@ -2,11 +2,11 @@
 [id="Retrying_a_failed_migration_plan"]
 = Retrying a failed migration plan
 
-If the cause of the failed migration was external (for example, network disruption), you can retry the migration:
+If the cause of the failed migration was external (for example, network disruption), you can retry the migration.
 
 .Procedure
 
-. Delete newly created target virtual machines or instances, if any, to avoid name conflicts with source virtual machines.
+. Delete newly created target virtual machines or instances, if any, to avoid name conflicts with the migrating VMware virtual machines.
 . Delete newly created disks in the target datastore to free up space.
 . OpenStack Platform only: Delete newly created network ports of failed instances.
 . Click menu:Compute[Migration > Migration Plans].
