--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Upgrading_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Upgrading_conversion_hosts.adoc
@@ -2,7 +2,9 @@
 [id="Upgrading_conversion_hosts"]
 = Upgrading the conversion hosts
 
-* To upgrade Red Hat Virtualization conversion hosts, enter the following commands on the Manager machine:
+.Red Hat Virtualization
+
+Enter the following commands on the Manager machine:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -10,4 +12,6 @@
 # cp /usr/share/ansible/roles/oVirt.v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
 ----
 
-* To upgrade OpenStack Platform conversion hosts, download the latest conversion appliance and create new conversion hosts. See xref:Creating_OSP_conversion_hosts[Creating OpenStack Platform conversion hosts].
+.OpenStack Platform
+
+Download the latest conversion appliance and create new conversion hosts. See xref:Creating_OSP_conversion_hosts[Creating OpenStack Platform conversion hosts].
