--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -11,17 +11,12 @@ What am I migrating?::
 What is the maximum number of disks, virtual machines, or NICs that I can migrate?::
 * Although there is no maximum number of disks or virtual machines that you can migrate, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users.
 * The maximum number of NICs per virtual machine that you can migrate is 4.
-+
-If you exceed the capabilities of the environment, the migrations will fail and may negatively affect existing applications running on virtual machines attached to the network and storage.
+* If you exceed the capabilities of the environment, the migrations will fail and may negatively affect existing applications running on virtual machines attached to the network and storage.
 
 What operating systems can I migrate?::
-* See link:https://access.redhat.com/articles/1351473[] for a list of supported guest operating systems.
-* See link:https://access.redhat.com/articles/973163[] for a list of certified guest operating systems.
-+
-[NOTE]
-====
-Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, running these guests is not officially supported.
-====
+* Supported guest operating systems: link:https://access.redhat.com/articles/1351473[]
+* Certified guest operating systems: link:https://access.redhat.com/articles/973163[]
+* Non-certified guest operating systems: Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, running these guests is not officially supported.
 
 What resources will my target environment require?::
 * Your target environment must be large enough to run the migrated virtual machines in addition to the original VMware virtual machines.
@@ -30,10 +25,14 @@ What resources will my target environment require?::
 What am I missing?::
 * Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
 
-How long will the migration take?::
-* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis.
-* A xref:Migration_example[migration example] is provided as a guide. It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
-
 What impact will the migration have on my users?::
 * Assess the effect the migration may have on a production environment.
 * Check whether users will lose access to critical applications.
+
+How long will the migration take?::
+* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis.
+* It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
++
+This xref:Migration_example[migration example] is provided as a guide.
+
+include::ref_Migration_example.adoc[leveloffset=+1]
